--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
  <main>
     <div>
-        <p> um dia estava andando e encontei duas notas de 50 reais
+        <p> um dia estava andando e encontei duas notas de 50 reais..
             <button> Brasil</button>
     </div>     
  </main>
